# profile-optimizer

./: .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  Makefile  WAVE2_TASKS.md
backend/: alembic.ini  pyproject.toml  test_db.py
backend/alembic/: env.py
backend/alembic/versions/: 3698a4d10bc8_add_profile_suggestions_table.py  85d41cf81615_add_question_deck_tables.py  a7e2f1b3c4d5_add_related_pattern_ids_to_questions.py  b1a33eac5fc9_add_question_type_options_and_blank_.py  c2d3e4f5a6b7_add_graph_system_models.py  d4508c1fe4e3_add_assessment_column_to_profile_.py  d5e6f7a8b9c0_add_cafe_drops_to_members.py  f1ca9ebf436c_update_member_schema_for_profile_data.py
backend/app/: main.py  models.py
backend/app/agents/: __init__.py  edge_discovery.py  group_question.py  interactive.py  pattern_finder.py  profile_chat.py  profile_evaluation.py  question_deck.py  question_targeting.py  taste_profile.py  url_processing.py
backend/app/api/: display_endpoints.py  endpoints.py  event_endpoints.py  graph_endpoints.py  message_endpoints.py  mobile_endpoints.py  stats_endpoints.py
backend/app/core/: config.py  database.py  security.py
backend/app/scripts/: __init__.py  seed_members.py
backend/app/services/: __init__.py  profile_evaluation.py  question_queue.py  rova_client.py  white_rabbit_client.py
backend/app/tools/: __init__.py  event_tools.py  graph_tools.py  group_tools.py  profile_tools.py  question_tools.py  targeting_tools.py  taste_tools.py
backend/app/utils/: __init__.py  (+1 more)
backend/tests/: conftest.py  test_pattern_finder.py  test_question_deck.py
(+45 files in other folders)
